fixed sidenav z-index and position

--- a/ngVioletMarketplaceMaterial/src/app/components/sidenav/sidenav.component.scss
+++ b/ngVioletMarketplaceMaterial/src/app/components/sidenav/sidenav.component.scss
@@ -2,8 +2,8 @@
   width: 15rem;
   height: 50rem;
   border-radius: 8px;
-  margin: 1.5em 0;
-  position: fixed;
+  margin: 1.5rem 0 0 2rem;
+  position: sticky;
   z-index: 2;
 
   .navbar {
